
    HADOOP-11554. Expose HadoopKerberosName as a hadoop subcommand (aw)

    HADOOP-11565. Add --slaves shell option (aw)

    HADOOP-9642. Configuration to resolve environment variables via
    ${env.VARIABLE} references (Kengo Seki via aw)

    HADOOP-7947. Validate XMLs if a relevant tool is available, when using
    scripts (Kengo Seki via aw)

  IMPROVEMENTS

    HADOOP-8017. Configure hadoop-main pom to get rid of M2E plugin execution
    not covered (Eric Charles via bobby)

    HADOOP-8015. ChRootFileSystem should extend FilterFileSystem 
    (Daryn Sharp via bobby)

    HADOOP-7595. Upgrade dependency to Avro 1.5.3. (Alejandro Abdelnur via atm)

    HADOOP-8078. Add capability to turn on security in unit tests. (Jaimin 
    Jetly via jitendra)

    HADOOP-7757. Test file reference count is at least 3x actual value (Jon
    Eagles via bobby)

    HADOOP-8147. test-patch should run tests with -fn to avoid masking test
    failures (Robert Evans via tgraves)

    HADOOP-8290. Remove remaining references to hadoop.native.lib (harsh)

    HADOOP-8308. Support cross-project Jenkins builds. (tomwhite)

    HADOOP-8297. Writable javadocs don't carry default constructor (harsh)

    HADOOP-8360. empty-configuration.xml fails xml validation
    (Radim Kolar via harsh)

    HADOOP-7659. fs -getmerge isn't guaranteed to work well over non-HDFS
    filesystems (harsh)

    HADOOP-8434. Add tests for Configuration setter methods.
    (Madhukara Phatak via suresh)

    HADOOP-8523. test-patch.sh doesn't validate patches before building
    (Jack Dintruff via jeagles)

    HADOOP-8719. Workaround for kerberos-related log errors upon running any
    hadoop command on OSX. (Jianbin Wei via harsh)

    HADOOP-8588. SerializationFactory shouldn't throw a
    NullPointerException if the serializations list is empty.
    (Sho Shimauchi via harsh)

    HADOOP-7930. Kerberos relogin interval in UserGroupInformation
    should be configurable (Robert Kanter via harsh)
